--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,205 @@ button {
 }
 
 
+
+/* BACKGROUND CSS */
+
+
+
+.backgroundContainer {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.boxarea {
+    margin: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;            
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(-45deg, #06080f, #121c24, #060a0c);
+    background-size: 400% 400%;
+    animation: moveBackground 10s ease-in-out infinite;
+}
+.boxarea li {
+    position: absolute;
+    display: flex;
+    list-style: none;
+}
+.boxarea li div {
+    margin: auto;
+    width: 0%;
+    height: 0%;
+}
+
+.boxarea li:nth-child(1) {
+    width: 10vh;
+    height: 10vh;
+    animation: rotation 12s linear infinite, animateMove1 12s linear infinite;
+}
+.boxarea li:nth-child(1) div {
+    background: radial-gradient(rgba(115, 175, 244, 0.2), rgba(115, 175, 244, 0));
+    box-shadow: 0px 0px 1vh #73b0f4;
+    animation: scaling 12s linear infinite;
+}
+
+.boxarea li:nth-child(2) {
+    width: 20vh;
+    height: 20vh;
+    animation: rotation 15s linear infinite 2s, animateMove4 15s linear infinite 2s;
+}
+.boxarea li:nth-child(2) div {
+    background: radial-gradient(rgba(152, 202, 98, 0.2), rgba(152, 202, 98, 0));
+    box-shadow: 0px 0px 1vh #98ca62;
+    animation: scaling 15s infinite 2s;
+}
+
+.boxarea li:nth-child(3) {
+    width: 15vh;
+    height: 15vh;
+    animation: rotation 12s linear infinite 4s, animateMove8 12s linear infinite 4s;
+}
+.boxarea li:nth-child(3) div {
+    background: radial-gradient(rgba(247, 108, 130, 0.2), rgba(247, 108, 130, 0));
+    box-shadow: 0px 0px 1vh #f76c82;
+    animation: scaling 12s infinite 4s;
+}
+
+.boxarea li:nth-child(4) {
+    width: 12vh;
+    height: 12vh;
+    animation: rotation 10s linear infinite 5s, animateMove6 10s linear infinite 5s;
+}
+.boxarea li:nth-child(4) div {
+    background: radial-gradient(rgba(149, 121, 218, 0.2), rgba(149, 121, 218, 0));
+    box-shadow: 0px 0px 1vh #9579da;
+    animation: scaling 10s infinite 5s;
+}
+
+.boxarea li:nth-child(5) {
+    width: 17vh;
+    height: 17vh;
+    animation: rotation 17s linear infinite 7s, animateMove2 17s linear infinite 7s;
+}
+.boxarea li:nth-child(5) div {
+    background: radial-gradient(rgba(253, 205, 86, 0.2), rgba(253, 205, 86, 0));
+    box-shadow: 0px 0px 1vh #fdcd56;
+    animation: scaling 17s infinite 7s;
+}
+
+.boxarea li:nth-child(6) {
+    width: 8vh;
+    height: 8vh;
+    animation: rotation 8s linear infinite 7.5s, animateMove7 8s linear infinite 7.5s;
+}
+.boxarea li:nth-child(6) div {
+    background: radial-gradient(rgba(250, 108, 81, 0.2), rgba(250, 108, 81, 0));
+    box-shadow: 0px 0px 1vh #fa6c51;
+    animation: scaling 8s infinite 7.5s;
+}
+
+.boxarea li:nth-child(7) {
+    width: 20vh;
+    height: 20vh;
+    animation: rotation 20s linear infinite 9s, animateMove5 20s linear infinite 9s;
+}
+.boxarea li:nth-child(7) div {
+    background: radial-gradient(rgba(115, 175, 244, 0.2), rgba(115, 175, 244, 0));
+    box-shadow: 0px 0px 1vh #73b0f4;
+    animation: scaling 20s infinite 9s;
+}
+
+.boxarea li:nth-child(8) {
+    width: 15vh;
+    height: 15vh;
+    animation: rotation 18s linear infinite 12s, animateMove3 18s linear infinite 12s;
+}
+.boxarea li:nth-child(8) div {
+    background: radial-gradient(rgba(247, 108, 130, 0.2), rgba(247, 108, 130, 0));
+    box-shadow: 0px 0px 1vh #f76c82;
+    animation: scaling 18s infinite 12s;
+}
+
+
+@keyframes moveBackground {
+    0% {background-position: 0 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0 50%;}
+}
+
+@keyframes animateMove1 {
+    0% {margin-left: 0; margin-top: 0;}
+    5% {margin-left: 0; margin-top: 0;}
+    100% {margin-left: 75vw; margin-top: 75vh;}
+}
+@keyframes animateMove2 {
+    0% {margin-left: 0;}
+    5% {margin-left: 0;}
+    100% {margin-left: 75vw;}
+}
+@keyframes animateMove3 {
+    0% {margin-left: 0; margin-top: 0;}
+    5% {margin-left: 0; margin-top: 0;}
+    100% {margin-left: 75vw; margin-top: -75vh;}
+}
+@keyframes animateMove4 {
+    0% {margin-top: 0;}
+    5% {margin-top: 0;}
+    100% {margin-top: -75vh;}
+}
+@keyframes animateMove5 {
+    0% {margin-left: 0; margin-top: 0;}
+    5% {margin-left: 0; margin-top: 0;}
+    100% {margin-left: -75vw; margin-top: -75vh;}
+}
+@keyframes animateMove6 {
+    0% {margin-left: 0;}
+    5% {margin-left: 0;}
+    100% {margin-left: -75vw;}
+}
+@keyframes animateMove7 {
+    0% {margin-left: 0; margin-top: 0;}
+    5% {margin-left: 0; margin-top: 0;}
+    100% {margin-left: -75vw; margin-top: 75vh;}
+}
+@keyframes animateMove8 {
+    0% {margin-top: 0;}
+    5% {margin-top: 0;}
+    100% {margin-top: 75vh;}
+}
+
+@keyframes rotation {
+    0% {transform: rotate(0deg)}
+    25% {transform: rotate(90deg)}
+    50% {transform: rotate(180deg)}
+    75% {transform: rotate(270deg)}
+    100% {transform: rotate(360deg)}
+}
+@keyframes scaling {
+    0% {width: 0%; height: 0%;}
+    10% {width: 100%; height: 100%;}
+    100% {width: 100%; height: 100%;}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* BOX CSS */
 
 #container {
@@ -38,7 +237,6 @@ button {
 .circle {
     width: 500px;
     height: 500px;
-    background: #18232b;
     border-radius: 50%;
     transform: rotate(45deg);
     -webkit-transition: 100ms linear;
@@ -72,8 +270,6 @@ button {
     justify-content: center;
     align-items: center;
     user-select: none;
-    background: black;
-    box-shadow: inset 0px 0px 220px 0px #121452;
     border-radius: 50%;
 }
 
@@ -152,7 +348,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: #97ca62;
+    user-select: none;
 }
 #two header h1, #five section h1 {
     font-size: calc(10vw * var(--multiplier));
@@ -182,7 +379,7 @@ button {
     padding: 5% 10% 10% 10%;
 }
 #two main h1 {
-    color: #949494;
+    color: #9579da;
 }
 #two main b {
     display: block;
@@ -505,6 +702,7 @@ button {
     align-items: center;
     color: black;
     border-bottom: 2px solid black;
+    user-select: none;
 }
 
 
@@ -1541,7 +1739,7 @@ button {
     width: calc(5 * var(--unit2));
     height:calc(5 * var(--unit2));
     box-shadow: inset 0px 0px 1vh 0px #121452;
-    background: red;
+    background: black;
     border-radius: 50%;
     display: flex;
     justify-content: center;
