--- a/css/style.css
+++ b/css/style.css
@@ -855,6 +855,7 @@ button {
 
 #six {
     overflow-y: scroll; 
+    overflow-x: hidden;
     display: grid;
     grid-template-areas: 
      'hd6 mn6'
@@ -1275,7 +1276,7 @@ button {
     height: 30vh;
 }
 .mrContainer div p {
-    font-size: 15pt;
+    font-size: calc(2vw * var(--multiplier));
 }
 
 .mrContainer div::-webkit-scrollbar {
@@ -1367,7 +1368,7 @@ button {
 
 #seven main {
     grid-area: APPmn;
-    display: grid;
+    display: flex;
     position: relative;
     height: 100%;
     width: 48%;
@@ -1730,7 +1731,7 @@ button {
     margin-bottom:2vw;
 }
 #seven section article button {
-    width:200px;
+    width:50%;
     height:50px;
     border-radius: 8px;
     background: #73b0f4;
